--- a/app/globals.css
+++ b/app/globals.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+.noto-sans-myFont {
+  font-family: "Noto Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+html {
+    font: 16px Noto-Sans-myFont, sans-serif;
+}
